--- a/bmi/index.html
+++ b/bmi/index.html
@@ -20,6 +20,9 @@
             <br />
             <button id="calculate">BMI berechnen</button>
         </div>
+        <div>
+            <p id="bmi"></p>
+        </div>
 
         <script type="text/javascript" src="index.js"></script>
     </body>
