--- a/bmi/index.html
+++ b/bmi/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="./css/index.css" />
     </head>
     <body>
-        <div class="bmi-calculator">
+        <form class="bmi-calculator">
             <h3>BMI - Rechner</h3>
 
             <br />
@@ -19,7 +19,7 @@
 
             <br />
             <button id="calculate">BMI berechnen</button>
-        </div>
+        </form>
         <div>
             <p id="bmi"></p>
         </div>
