--- a/bmi/index.html
+++ b/bmi/index.html
@@ -11,11 +11,11 @@
 
             <br />
             <label for="height">Körpergröße in m:</label>
-            <input type="text" id="height" name="height" />
+            <input type="number" id="height" name="height" step="0.01" />
 
             <br />
             <label for="weight">Gewicht in kg:</label>
-            <input type="text" id="weight" name="weight" />
+            <input type="number" id="weight" name="weight" />
 
             <br />
             <button id="calculate">BMI berechnen</button>
