--- a/bmi/index.html
+++ b/bmi/index.html
@@ -11,11 +11,11 @@
 
             <br />
             <label for="height">Körpergröße in m:</label>
-            <input type="number" id="height" name="height" step="0.01" />
+            <input type="number" id="height" name="height" step="0.01" min="0.50" max="4" />
 
             <br />
             <label for="weight">Gewicht in kg:</label>
-            <input type="number" id="weight" name="weight" />
+            <input type="number" id="weight" name="weight" step="0.10" min="10" max="400"/>
 
             <br />
             <button id="calculate">BMI berechnen</button>
