--- a/bmi/index.html
+++ b/bmi/index.html
@@ -24,6 +24,10 @@
             <p id="bmi"></p>
         </div>
 
+        <div id="weight-normal" style="display: none;">Normalgewicht!</div>
+        <div id="weight-below" style="display: none;">Unter Normalgewicht!</div>
+        <div id="weight-above" style="display: none;">Über Normalgewicht!</div>
+
         <script type="text/javascript" src="index.js"></script>
     </body>
 </html>
