--- a/objekte/index-bank.html
+++ b/objekte/index-bank.html
@@ -5,6 +5,6 @@
     <body> 
         <h3>Bank</h3>
 
-        <script type="text/javascript" src="bank.js"></script>
+        <script type="text/javascript" src="bank1.js"></script>
     </body>
 </html>
