--- a/projekt-lightbox/index.html
+++ b/projekt-lightbox/index.html
@@ -1,6 +1,16 @@
 <html>
     <head>
-        
+        <style>
+            #overlay{
+                position: absolute;
+                top: 0px;
+                left: 0px;
+                right: 0px;
+                bottom: 0px;
+                background-color: black;
+                opacity: 0.75;
+            }
+        </style>
     </head>
     <body>
         <div class="gallery">
@@ -9,6 +19,8 @@
             <a href="#" class="gallery-item"><img src="https://via.placeholder.com/150" alt="" /></a>
             <a href="#" class="gallery-item"><img src="https://via.placeholder.com/150" alt="" /></a>
         </div>
+
+
         <script type="text/javascript" src="./lib/jquery/jquery-3.4.1.js"></script>
         <script type="text/javascript" src="index.js"></script>
     </body>
