--- a/projekt-lightbox/index.html
+++ b/projekt-lightbox/index.html
@@ -1,6 +1,11 @@
 <html>
     <head>
         <style>
+            .gallery-item img{
+                width: 150px;
+                height: auto;
+            }
+
             #overlay{
                 position: absolute;
                 top: 0px;
@@ -14,10 +19,10 @@
     </head>
     <body>
         <div class="gallery">
-            <a href="#" class="gallery-item"><img src="https://via.placeholder.com/150" alt="" /></a>
-            <a href="#" class="gallery-item"><img src="https://via.placeholder.com/150" alt="" /></a>
-            <a href="#" class="gallery-item"><img src="https://via.placeholder.com/150" alt="" /></a>
-            <a href="#" class="gallery-item"><img src="https://via.placeholder.com/150" alt="" /></a>
+            <a href="./image/advent1.jpg" class="gallery-item"><img src="./image/advent1.jpg" alt="" /></a>
+            <a href="./image/advent2.jpg" class="gallery-item"><img src="./image/advent2.jpg" alt="" /></a>
+            <a href="./image/advent3.jpg" class="gallery-item"><img src="./image/advent3.jpg" alt="" /></a>
+            <a href="./image/advent1.jpg" class="gallery-item"><img src="./image/advent1.jpg" alt="" /></a>
         </div>
 
 
