--- a/projekt-lightbox-jquery-plugin/index.html
+++ b/projekt-lightbox-jquery-plugin/index.html
@@ -1,5 +1,17 @@
 <html>
     <head>
+        <style>
+            .gallery-item img{
+                width: 150px;
+                height: auto;
+                float: left;
+                display: block;
+                text-decoration: none;
+                padding: 3px;
+                border: 1px solid rgb(200, 200, 200);
+                margin: 5px;
+            }
+        </style>
        <link rel="stylesheet" type="text/css" href="./lightbox.css"></link>
     </head>
     <body>
