add character + blöcke

--- a/Spiel Fall_Game/index.html
+++ b/Spiel Fall_Game/index.html
@@ -4,9 +4,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <div id="game">
+            <div id="character"></div>
+
+        </div>
 
 
-        <link rel="javascript" href="script.js">
+        <script src="script.js"></script>
     </body>
 </html>
