--- a/remove_div/index.html
+++ b/remove_div/index.html
@@ -4,7 +4,7 @@
         
     </head>
     <body>
-        <div class="container">
+        <div class="container" id="container">
             <div class="test" id="test">
                 <p>Test</p>
             </div>
