--- a/todolist/index.html
+++ b/todolist/index.html
@@ -12,7 +12,7 @@
                 <h1>To Do List</h1>
                 <input id="inputField" type="text"><button id="addButton">+</button></input>
                 <!--Container for to dos-->
-                <div class="toDos" id="container--toDo">
+                <div class="toDos" id="toDoList">
                 </div>
             </div>
         </div>
