--- a/Spiel 2/index.html
+++ b/Spiel 2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de" onclick="jump()">
+<html lang="de" onclick="jump()" onkeypress="jump()">
     <head>
         <meta charset="UTF-8">
         <title>Mein Spiel 2</title>
