--- a/HexColorsGradient/index.html
+++ b/HexColorsGradient/index.html
@@ -13,7 +13,7 @@
             
             <div class="Result">
                 <p id="colorValue">background: white</p>
-                <button id="button" onclick="changeColor">Klick mich</button>
+                <button id="button" onclick="changeColor">click me</button>
             </div>
         </div>
         <script src="script.js"></script>
