--- a/vowel_counter/index.html
+++ b/vowel_counter/index.html
@@ -14,7 +14,9 @@
                     <input type="text" id="inputText">
                     <input type="submit" id="CheckButton" value="Chek">
                 </form>
+                <h3 id="result"> </h3>
             </div>
+           
         </div>
 
         <script src="counter.js"></script>
