--- a/clickCounter/index.html
+++ b/clickCounter/index.html
@@ -1,15 +1,20 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8">       
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title> Change Color</title>
         <link rel="stylesheet" href="style.css">
-       
     </head>
     <body>
         <main>
-            <div class="container">
-                <h1>click counter</h1>
-                <p id="counter"></p>
-                <button id="button">Klick mich!</button>
+            <div class="contianer">
+                <div class="counter__container">
+                    <h1>click counter</h1>
+                    <p id="counter"></p>
+                    <button id="button">Klick mich!</button>
+                </div>
+                <a href="../index.html" class="previous">&laquo; Back to overview</a>
             </div>
         </main>
         <script type="text/javascript" src="index.js"></script>
