--- a/expanse/index.html
+++ b/expanse/index.html
@@ -38,6 +38,7 @@
                     
                 </table>
             </div>
+            <a href="../index.html" class="previous">&laquo; Back to overview</a>
         </div>
         <!--JS File-->
         <script src="main.js"></script>
