--- a/changeColor/index.html
+++ b/changeColor/index.html
@@ -8,11 +8,14 @@
     </head>
     <body>
         <div class="container" id="mainContainer">
+            <h1>Change Color</h1>
             <div class="colorDiv" id="colorDiv">
                 <h1>Hello World</h1>
                 <button class="btn" id="btn">Change Color</button>
             </div>
+            <a href="../index.html" class="previous">&laquo; Back to overview</a>
         </div>
+
 
         <script src="script.js"></script>
     </body>
