--- a/game1/index.html
+++ b/game1/index.html
@@ -1,7 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        
+        <!--CSS-->
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
+        
+        <title>Falling Game</title>
     </head>
     <body>
         <div class="container">
@@ -9,6 +17,7 @@
             <div id="game">
             </div>
         </div>
+        <a href="../index.html" class="previous">&laquo; Back to overview</a>
         <script type="text/javascript" src="game.js"></script>
     </body>
 </html>
