--- a/HexColorsGradient/index.html
+++ b/HexColorsGradient/index.html
@@ -5,16 +5,19 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="App">
-            <div class="Explanation">
-                <h1>Create Hex Colors Gradient</h1>
-                <h2>CLICK THE BUTTON BELLOW <br> TO GENERATE A RANDOM GRADIENT HEX COLOR COMBINATION.</h2>
+        <div class="container">
+            <div class="App">
+                <div class="Explanation">
+                    <h1>Create Hex Colors Gradient</h1>
+                    <h2>CLICK THE BUTTON BELLOW <br> TO GENERATE A RANDOM GRADIENT HEX COLOR COMBINATION.</h2>
+                </div>
+                
+                <div class="Result">
+                    <p id="colorValue">background: white</p>
+                    <button id="button" onclick="changeColor">click me</button>
+                </div>
             </div>
-            
-            <div class="Result">
-                <p id="colorValue">background: white</p>
-                <button id="button" onclick="changeColor">click me</button>
-            </div>
+            <a href="../index.html" class="previous">&laquo; Back to overview</a>
         </div>
         <script src="script.js"></script>
     </body>
