--- a/dogGame/index.html
+++ b/dogGame/index.html
@@ -16,13 +16,13 @@
         <div class="app">
             <div class="gamefield">
                 <div class="player">
-                    <img src="player.png" alt="Player">
+                    <img src="prinzessin.png" alt="Player" />
                 </div>
                 <div class="ball">
-
+                    <img src="Ball.jpg" alt="Ball" />
                 </div>
                 <div class="dog">
-                    <img src="dog.jpg" alt="Dog">
+                    <img src="dog.jpg" alt="Dog" />
                 </div>
             </div>
             <div class="controll">
