--- a/game1/index.html
+++ b/game1/index.html
@@ -13,11 +13,17 @@
     </head>
     <body>
         <div class="container">
-            <h1>Falling Game</h1>
-            <div id="game">
+            <div class="App">
+                <h1>Falling Game</h1>
+                <div id="game">
+                </div>
+                <div class="controll">
+                    <button class="gameBtn" id="jump">Jump</button>
+                    <button class="gameBtn" id="start">Start</button>
+                </div>
             </div>
+            <a href="../index.html" class="previous">&laquo; Back to overview</a>
         </div>
-        <a href="../index.html" class="previous">&laquo; Back to overview</a>
         <script type="text/javascript" src="game.js"></script>
     </body>
 </html>
