--- a/index.html
+++ b/index.html
@@ -64,6 +64,24 @@
                 </div>
                 <a class="btn project__btn" href="jumpGame/index.html">Show</a>
             </div>
+            <div class="project">
+                <div class="project__imgDiv">
+                    <img src="images/dogGame.PNG" alt="Dog Game" class="project__img" loading="lazy">
+                </div>
+                <h5 class="project__name">Dog Game</h5>
+                <div class="project__tech">
+                    <img class="" alt="tech" src="overview/img/zahnrad.svg"></img>
+                    <p>JS</p>
+                </div>
+                <div class="project__area">
+                    <img class="" alt="size" src="overview/img/size.svg"></img>
+                    <p>small</sup></p>
+                </div>
+                <div class="project__text">
+                    <p>A little game where you throw a ball to a dog.</p>
+                </div>
+                <a class="btn project__btn" href="dogGame/index.html">Show</a>
+            </div>
         </section>
         <section class="section section__portfolio">
 
