--- a/dogGame/index.html
+++ b/dogGame/index.html
@@ -14,7 +14,7 @@
             <p>3 Versuche den Hund den Ball zuzuwerfen.</p>
         </div>
         <div class="app">
-            <div class="gamefield">
+            <div id="gamefield">
                 <div id="life">
                     <img src="herz-1.png" alt="heart" id="1" />
                     <img src="herz-1.png" alt="heart" id="2" />
@@ -26,10 +26,7 @@
                 <div class="player">
                     <img src="prinzessin.png" alt="Player" />
                 </div>
-                <div id="ball">
-                    <img src="Ball.jpg" alt="Ball" />
-                </div>
-                <div id="dog">
+                <div id="Dog">
                     <img src="dog.jpg" alt="Dog" />
                 </div>
             </div>
