--- a/dogGame/index.html
+++ b/dogGame/index.html
@@ -27,7 +27,7 @@
                     <img src="prinzessin.png" alt="Player" />
                 </div>
                 <div id="Dog">
-                    <img src="dog.jpg" alt="Dog" />
+                    <img src="Dog.jpg" alt="Dog" />
                 </div>
             </div>
             <div class="controll">
