--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <div class="project">
                 <div class="project__imgDiv">
-                    <img src="images/dogGame.PNG" alt="Dog Game" class="project__img" loading="lazy">
+                    <img src="images/dogGame.png" alt="Dog Game" class="project__img" loading="lazy">
                 </div>
                 <h5 class="project__name">Dog Game</h5>
                 <div class="project__tech">
