--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             
             <div class="project">
                 <div class="project__imgDiv">
-                    <img src="overview/img/hexcolors.png" alt="Hex Colors Gradient" class="project__img" loading="lazy">
+                    <img src="overview/img/hexcolors.PNG" alt="Hex Colors Gradient" class="project__img" loading="lazy">
                 </div>
                 <h5 class="project__name">Hex Colors Gradient</h5>
                 <div class="project__tech">
