--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                     </a>
                 </li>
                 <li class="footer__nav--item">
-                    <a href="https://twitter.com/MKlestil" class="footer__nav--link" target="_blank" rel="noopener">
-                        <p class="footer__icon footer__icon--twitter">Twitter</p>
+                    <a href="https://dev.to/mklestil" class="footer__nav--link" target="_blank" rel="noopener">
+                        <p class="footer__icon footer__icon--dev">Dev.to</p>
                     </a>
                 </li>
                 <li class="footer__nav--item">
